data/Java/12-incomp-string-int/6/[M]Error.txt
https://stackoverflow.com/questions/48536811/error-incompatible-types-string-cannot-be-converted-to-int-in-java
Name.java:26: error: incompatible types: String cannot be converted to int
    int n2 = args[2];
                 ^